--- a/src/components/input/styles.css
+++ b/src/components/input/styles.css
@@ -1,6 +1,7 @@
-.placeholder-component {
+.input-component {
   padding: 5px;
   border-radius: 10px;
   font-size: 3em;
   width: 90vw;
+  text-align: center;
 }
