--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -1,20 +1,25 @@
 .button-component {
   background-color: black;
-
   padding: 5px;
   font-size: 3.5em;
   color: white;
   text-decoration: none;
   border-radius: 10px;
   border: 10px solid gray;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto;
+  text-align: center;
 }
 
 .button-small {
   width: 90vw;
-  height: 20vh;
+  height: 10vh;
 }
 
 .button-big {
   width: 90vw;
-  height: 30vh;
+  height: 17vh;
 }
