edited styles and routes

--- a/src/views/tracker/styles.css
+++ b/src/views/tracker/styles.css
@@ -9,7 +9,18 @@ body {
 }
 .food-menu {
   width: 100vw;
+  height: 100vh;
   background-color: #f2d7bf;
+}
+.water-menu {
+  width: 100vw;
+  height: 100vh;
+  background-color: #b2daf1;
+}
+.see-medicines {
+  width: 100vw;
+  height: 100vh;
+  background-color: #f5f5dc;
 }
 
 .header {
