--- a/src/views/meditation/styles.css
+++ b/src/views/meditation/styles.css
@@ -29,10 +29,6 @@ body {
   -webkit-text-stroke: 1px black;
 }
 
-.guide:nth-child(odd) {
-  background-color: rgb(196, 196, 196);
-}
-
 .guides {
   border: 1px solid black;
 }
@@ -41,6 +37,6 @@ body {
   font-size: 2em;
 }
 
-.content-wrapper > :nth-child(odd) {
+.meditation-menu .content-wrapper > :nth-child(odd) {
   background-color: #c4c4c4;
 }
