--- a/src/views/tictactoe/Tictactoe.css
+++ b/src/views/tictactoe/Tictactoe.css
@@ -1,3 +1,11 @@
+.game-board {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.board-row {
+  display: flex;
+}
 .board-row:after {
   clear: both;
   content: '';
@@ -17,12 +25,12 @@
   font-size: 6rem;
   font-weight: bold;
   line-height: 34px;
-  height: 8rem;
+  height: 7rem;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 8rem;
+  width: 7rem;
   transition: all 0.5s ease;
 }
 .function-button {
