--- a/src/components/tracker/styles.css
+++ b/src/components/tracker/styles.css
@@ -46,7 +46,7 @@ body {
   -webkit-text-stroke: 1px black;
 }
 
-.content-wrapper {
+.tracker-wrapper {
   min-height: 50vh;
   padding-top: 1rem;
   font-size: 1.5rem;
@@ -61,7 +61,7 @@ body {
   font-weight: 600;
 }
 
-.content-wrapper button {
+.tracker-wrapper button {
   font-size: 1.3rem;
   padding: 0 0.2rem;
 }
