--- a/src/views/login1/Login1.css
+++ b/src/views/login1/Login1.css
@@ -32,9 +32,10 @@ body {
   text-shadow: 0px 0px 1px #000;
 }
 .section--content {
-  height: 30%;
+  height: 30vh;
   padding-top: 1rem;
   background-color: #7eceff;
+  padding-top: 10%;
   font-size: 1.5rem;
   color: #fff;
   -webkit-text-stroke: 1px #000;
